[package]
name = "colonnade"
version = "0.2.0"
authors = ["dfhoughton <dfhoughton@gmail.com>"]
description= "format tabular data for display"
homepage = "https://github.com/dfhoughton/colonnade"
repository = "https://github.com/dfhoughton/colonnade"
documentation = "https://docs.rs/colonnade"
readme = "README.md"
keywords = [ "text", "table", "wrap", "justify", "align" ]
categories = [ "command-line-interface", "text-processing", "value-formatting" ]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term = "0"