[package]
name = "colonnade"
version = "1.3.2"
authors = ["dfhoughton <dfhoughton@gmail.com>"]
description= "format tabular data for display"
homepage = "https://github.com/dfhoughton/colonnade"
repository = "https://github.com/dfhoughton/colonnade"
documentation = "https://docs.rs/colonnade"
readme = "README.md"
keywords = [ "text", "table", "wrap", "justify", "align" ]
categories = [ "command-line-interface", "text-processing", "value-formatting" ]
license = "MIT"
edition = "2018"

[dependencies]
unicode-segmentation = "1"
strip-ansi-escapes = "0.2"
regex = { version = "1.7", optional = true }
lazy_static = { version = "^1", optional = true }

[dev-dependencies]
term = "0"
ansi_term = "0"

[features]
nbsp = ["regex", "lazy_static"]
